force-app/main/default/objects/Pipeline_Configuration__c/Pipeline_Configuration__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration details for the CI/CD pipeline</description>
    <label>Pipeline Configuration</label>
    <nameField>
        <label>Pipeline Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>