force-app/main/default/objects/Pipeline_Configuration__c/fields/Automation__c.field-meta.xml
<CustomField>
    <fullName>Automation__c</fullName>
    <label>Automation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Test Only</fullName>
            </value>
            <value>
                <fullName>Validate Deployment</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>