force-app/main/default/objects/Pipeline_Configuration__c/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <label>Checks</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run apex tests local</fullName>
            </value>
            <value>
                <fullName>Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>