force-app/main/default/objects/Pipeline_Configuration__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deploy entire sfdx project</fullName>
            </value>
            <value>
                <fullName>Deploy Delta(changed files)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>