force-app/main/default/objects/Pipeline_Configuration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Push</fullName>
            </value>
            <value>
                <fullName>Pull request is opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>