force-app/main/default/objects/Pipeline_Configuration__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <inlineHelpText>Describe what in just a few words is you are automating, i.e &quot;Deployment to UAT&quot; or &quot;Validate deployment when PR is created.&quot;</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>