force-app/main/default/objects/Pipeline_Configuration__c/fields/SFDX_URL_CI_Secret__c.field-meta.xml
<CustomField>
    <fullName>SFDX_URL_CI_Secret__c</fullName>
    <inlineHelpText>SFDX URL generated from Visual Studio Code (sfdx force:org:display --verbose --json)</inlineHelpText>
    <label>SFDX URL CI Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>