force-app/main/default/objects/Pipeline_Configuration__c/fields/Target_Branches__c.field-meta.xml
<CustomField>
    <fullName>Target_Branches__c</fullName>
    <description>Specify the target branches</description>
    <inlineHelpText>Specify the target branches</inlineHelpText>
    <label>Target Branches</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>